# rl_nlp

./: .gitignore  README.md  dreamer.py  env.py  pyproject.toml  random_action.py  requirements.txt  rollout.py
experiments/2022-11-03/: get_env_shape.py  random_action.py  save_video.py
experiments/2022-11-09/: avalon-quickstart.py
experiments/2022-11-10/: replay_buffer_test.py
experiments/2022-11-17/: avalon-test.ipynb  avalon-test.py
experiments/2022-12-22/: minedojo-test.py
experiments/2023-01-03/: minedojo-video.py
experiments/2023-01-06/: minedojo-debug.py  minedojo-random.py  minedojo-rllib.py
experiments/2023-03-03/: preprocessing.py
experiments/2023-03-21/: .env.template  README.md  environment_minedojo.yaml  environment_minerl.yaml  minedojo_rollout.py  minerl_rollout.py  requirements_minedojo.txt  requirements_minerl.txt  rollout.py  utils.py
src/dreamer/: dreamer.py  env.py  replay_buffer.py  utils.py
