[project]
name = "dreamer"
version = "0.0.1"
authors = [
  { name="Cesar Salcedo", email="cesar.salcedo@utec.edu.pe" },
]
description = "Dreamer for RL+NLP project at ML@B"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]